--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="head">
 
-            <!-- Rishabh -->
+            <!-- Rishabh kumar-->
         <!-- logo -->
             <div class="logo">
 
